--- a/css/app.css
+++ b/css/app.css
@@ -12,7 +12,7 @@ body {
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
-	background: url('../img/page-loader.gif') 50% 50% no-repeat rgb(249,249,249);
+	background: url('../img/ajax-loader.gif') 50% 50% no-repeat rgb(249,249,249);
 }
 .bottom_nav_line {
 	margin-bottom: 0 !important;
@@ -175,7 +175,7 @@ HOME
 *********************************************************/
 
 .about_and_maps {
-	margin: 25px 80px;
+	margin: 25px 30px;
 }
 
 #map {
@@ -351,4 +351,31 @@ RESPONSIVE STYLES
 	    margin: 0 20px;
 	}
 
+}
+
+@media screen and (max-width: 480px) {
+	.about_and_maps {
+	    margin: 25px 0;
+	    text-align: center;
+	}
+
+	.fancy span:before, .fancy span:after {
+		width: 100px;
+	}
+
+	.fancy span:before {
+		margin-right: 25px;
+	}
+
+	.footer_col {
+		margin: 10px 0;
+	}
+
+}
+
+
+@media screen and (max-width: 1000px) {
+	#ninja-slider {
+		height: auto !important;
+	}
 }
